Added get engine by model and delete engine to swagger.json.
